# run-lab

./: .gitignore  CODE_STATUS.md  README.md  TEST_STATUS.md  pyproject.toml
.dispatch/: latest_blindwrite_outcome.json  latest_policy_preflight_record.json  latest_promotion_parity_stop_line.json  latest_queue_outcome.json  latest_routing_record.json  latest_tier1_openclaw_handoff.json  latest_tier1_openclaw_source_packet.json  latest_wcp_forward_result.json  latest_wcp_handoff.json  latest_wcp_invocation_result.json  repo_queue_state.json
docs/: RunLab_v1.docx  SEPARATION.md
docs/prompts/tier1/: latest_tier1_openclaw_source_packet.md
src/run_lab/: __init__.py  cli.py  constants.py  io.py  replay.py  runner.py  verify.py  workspace.py
srs/incoming/: SRS_v1_1_dispatcher_dev_smoke.md
tests/: test_run_lab.py
